--- a/resources/fbgs_sensor.ui
+++ b/resources/fbgs_sensor.ui
@@ -38,7 +38,7 @@
          <item>
           <widget class="QLineEdit" name="hostInput">
            <property name="text">
-            <string>AC-GR-214GXH:2055</string>
+            <string>1612-Ultron:2055</string>
            </property>
            <property name="placeholderText">
             <string>Host:Port</string>
